further deepspeed integration

--- a/ds_config.json
+++ b/ds_config.json
@@ -14,15 +14,14 @@
     },
     
     "scheduler": {
-        "type": "WarmupDecayLR",
+        "type": "WarmupCosineLR",
         "params": {
-            "warmup_min_lr": 0,
-            "warmup_max_lr": "auto",
+            "warmup_min_ratio": 0,
             "warmup_num_steps": "auto",
             "total_num_steps": "auto"
         }
     },
-    
+        
     "zero_optimization": {
         "stage": 3,
         "offload_optimizer": {
