--- a/ds_config_zero-1.json
+++ b/ds_config_zero-1.json
@@ -21,6 +21,15 @@
             "total_num_steps": "auto"
         }
     },
+        
+    "zero_optimization": {
+        "stage": 1,
+        "contiguous_gradients": true,
+        "overlap_comm": true,
+        "reduce_scatter": true,
+        "reduce_bucket_size": 5e8,
+        "allgather_bucket_size": 5e8
+    },
     
     "fp16": {
         "enabled": "auto",
