--- a/ds_config_zero-2.json
+++ b/ds_config_zero-2.json
@@ -21,6 +21,17 @@
             "total_num_steps": "auto"
         }
     },
+        
+    "zero_optimization": {
+        "stage": 2,
+        "offload_optimizer": {
+            "device": "cpu",
+            "pin_memory": true
+        },
+        "overlap_comm": true,
+        "contiguous_gradients": true,
+        "reduce_bucket_size": "auto"
+    },
     
     "fp16": {
         "enabled": "auto",
