--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+accelerate==1.5.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.13
 aiosignal==1.3.2
@@ -44,6 +45,7 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
+peft==0.14.0
 pillow==11.0.0
 propcache==0.3.0
 protobuf==6.30.0
@@ -64,9 +66,6 @@ sympy==1.13.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tokenizers==0.21.1
-torch==2.6.0+cu124
-torchaudio==2.6.0+cu124
-torchvision==0.21.0+cu124
 tqdm==4.67.1
 transformers==4.49.0
 triton==3.2.0
