--- a/ds_config_zero-2.json
+++ b/ds_config_zero-2.json
@@ -33,17 +33,8 @@
         "reduce_bucket_size": "auto"
     },
     
-    "fp16": {
-        "enabled": "auto",
-        "loss_scale": 0,
-        "loss_scale_window": 1000,
-        "initial_scale_power": 16,
-        "hysteresis": 2,
-        "min_loss_scale": 1
-    },
-    
     "bf16": {
-        "enabled": "auto"
+        "enabled": true
     },
     
     "gradient_clipping": "auto",
