--- a/ds_config_zero-3.json
+++ b/ds_config_zero-3.json
@@ -43,17 +43,8 @@
         "stage3_gather_16bit_weights_on_model_save": true
     },
     
-    "fp16": {
-        "enabled": "auto",
-        "loss_scale": 0,
-        "loss_scale_window": 1000,
-        "initial_scale_power": 16,
-        "hysteresis": 2,
-        "min_loss_scale": 1
-    },
-    
     "bf16": {
-        "enabled": "auto"
+        "enabled": true
     },
     
     "gradient_clipping": "auto",
