--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,44 @@
 absl-py==2.1.0
-accelerate==1.5.1
+accelerate==1.5.2
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.13
+aiohttp==3.11.14
 aiosignal==1.3.2
 annotated-types==0.7.0
 async-timeout==5.0.1
 attrs==25.3.0
+audioread==3.0.1
+braceexpand==0.1.7
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
-datasets==3.3.2
+datasets==3.4.1
+decorator==5.2.1
 deepspeed==0.16.4
 dill==0.3.8
 einops==0.8.1
-filelock==3.13.1
+filelock==3.18.0
 frozenlist==1.5.0
-fsspec==2024.6.1
+fsspec==2024.12.0
 grpcio==1.71.0
+h5py==3.13.0
 hjson==3.1.0
 huggingface-hub==0.29.3
 idna==3.10
-Jinja2==3.1.4
+Jinja2==3.1.6
+joblib==1.4.2
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.44.0
 Markdown==3.7
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 mpmath==1.3.0
 msgpack==1.1.0
-multidict==6.1.0
+multidict==6.2.0
 multiprocess==0.70.16
-networkx==3.3
+networkx==3.4.2
 ninja==1.11.1.3
-numpy==2.1.2
+numba==0.61.0
+numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -45,13 +55,17 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
-peft==0.14.0
+peft==0.15.0
 pillow==11.0.0
+platformdirs==4.3.7
+pooch==1.8.2
+positional-encodings==6.0.3
 propcache==0.3.0
-protobuf==6.30.0
+protobuf==6.30.1
 psutil==7.0.0
 py-cpuinfo==9.0.0
 pyarrow==19.0.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
@@ -61,17 +75,26 @@ regex==2024.11.6
 requests==2.32.3
 rotary-embedding-torch==0.8.6
 safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
 six==1.17.0
+soundfile==0.13.1
+soxr==0.5.0.post1
 sympy==1.13.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
+threadpoolctl==3.6.0
 tokenizers==0.21.1
+torch==2.6.0
+torchaudio==2.6.0+cu124
+torchvision==0.21.0+cu124
 tqdm==4.67.1
 transformers==4.49.0
 triton==3.2.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+webdataset==0.2.111
 Werkzeug==3.1.3
 xxhash==3.5.0
 yarl==1.18.3
