finally got multimodal training fixed with data parallelization (involved batch distribution synchronization across devices), next is fixing stability for audio outputs

--- a/ds_config_zero-2.json
+++ b/ds_config_zero-2.json
@@ -28,9 +28,12 @@
             "device": "cpu",
             "pin_memory": true
         },
-        "overlap_comm": true,
         "contiguous_gradients": true,
-        "reduce_bucket_size": "auto"
+        "overlap_comm": false,
+        "reduce_scatter": false,
+        "allgather_partitions": true,
+        "allgather_bucket_size": 5e8,
+        "reduce_bucket_size": 5e8
     },
     
     "bf16": {
