--- a/ds_config.json
+++ b/ds_config.json
@@ -31,8 +31,8 @@
     },
     
     "gradient_clipping": "auto",
-    "steps_per_print": 100,
     
     "wall_clock_breakdown": false,
+    "zero_allow_untested_optimizer": true,
     "communication_data_type": "fp16"
 }
