--- a/ds_config_zero-2.json
+++ b/ds_config_zero-2.json
@@ -7,7 +7,7 @@
         "type": "AdamW",
         "params": {
             "lr": "auto",
-            "betas": [0.9, 0.999],
+            "betas": "auto",
             "eps": 1e-8,
             "weight_decay": "auto"
         }
